# webrtc-ros

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: http_service.h  rtc_peer.h  v4l2_frame_buffer.h  v4l2_utils.h  webrtc_ros.h
src/: args.h  libav_encoder.cpp  libav_encoder.hpp  main.cpp  openh264_encoder.cpp  openh264_encoder.h  parser.cpp  rtc_peer.cpp  v4l2_webrtc.cpp  v4l2_webrtc.h
src/capturer/: v4l2_capturer.cpp  v4l2_capturer.h  video_capturer.h
src/common/: h264_frame_buffer.cpp  h264_frame_buffer.h  v4l2_frame_buffer.cpp  v4l2_frame_buffer.h  v4l2_utils.cpp  v4l2_utils.h
src/common/interface/: subject.h
src/encoder/: encoder.hpp  libav_encoder.cpp  libav_encoder.hpp
src/rtc/: rtc_peer.cpp  rtc_peer.h
src/signaling/: http_service.cpp  http_service.h
